service-broker/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: service-broker
  name: service-broker
