service-broker/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: redis
    app.kubernetes.io/name: service-broker
    name: service-broker-redis
  name: service-broker-redis-port
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/instance: redis
    app.kubernetes.io/name: service-broker
  type: ClusterIP
