service-broker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    name: service-broker-redis
  name: service-broker-redis
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-broker-redis
                port:
                  number: 80
